--- a/Makefile.am
+++ b/Makefile.am
@@ -2,5 +2,7 @@ AUTOMAKE_OPTIONS = foreign
 
 SUBDIRS = src
 
-pkgconfigdir=$(libdir)/pkgconfig
+pkgconfigdir=${libdir}/pkgconfig
 pkgconfig_DATA=libaosd.pc
+
+EXTRA_DIST = LICENSE LICENSE.ghosd
