Original ghosd LICENSE is no longer needed as it's included into the main one.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,4 +5,4 @@ SUBDIRS = src
 pkgconfigdir=${libdir}/pkgconfig
 pkgconfig_DATA=libaosd.pc
 
-EXTRA_DIST = LICENSE LICENSE.ghosd
+EXTRA_DIST = LICENSE
