--- a/examples/text/Makefile
+++ b/examples/text/Makefile
@@ -1,9 +1,9 @@
+PROG_NOINST = text
+
 SRCS = text.c
 
 include ../../buildsys.mk
 include ../../extra.mk
 
-PROG_NOINST = text
-
-CPPFLAGS += ${LIB_CPPFLAGS} ${AUX_CFLAGS} -I../../src
-LDFLAGS += -L../../src -laosd ${AUX_LDFLAGS} ../shared/example-shared.a
+CPPFLAGS += ${LIB_CPPFLAGS} ${AUX_CFLAGS} -I../../libaosd
+LDFLAGS += -L../../libaosd -laosd ${AUX_LDFLAGS} ../shared/example-shared.a
