--- a/libaosd/Makefile
+++ b/libaosd/Makefile
@@ -15,4 +15,5 @@ INCLUDES += ${AUX_PANGO}.h
 include ../buildsys.mk
 
 CPPFLAGS += ${LIB_CPPFLAGS} ${AUX_CFLAGS} -I..
+CFLAGS += ${LIB_CFLAGS}
 LIBS += ${AUX_LDFLAGS}
