fix image example

--- a/examples/image/Makefile
+++ b/examples/image/Makefile
@@ -5,6 +5,6 @@ SRCS = image.c
 include ../../buildsys.mk
 include ../../extra.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} ${AUX_CFLAGS} -I../../libaosd -I../shared
-CFLAGS += ${LIB_CFLAGS}
-LDFLAGS += ${LIB_LDFLAGS} ${AUX_LDFLAGS} ../shared/example-shared.a -L../../libaosd -laosd
+CPPFLAGS += ${AUX_CFLAGS} -I../../libaosd -I../shared
+CFLAGS +=
+LDFLAGS += ${AUX_LDFLAGS} ../shared/example-shared.a -L../../libaosd -laosd
