* Made pango and pangocairo packages obligatory;   * Removed shared dir from examples since there was only one example that used it;   * Moved aosd_cat example into a separate dir;   * Slightly rewrote image example.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,14 +1,6 @@
-PROG = aosd_cat
-
-SUBDIRS = shared \
-	  animation \
+SUBDIRS = animation \
+	  aosd_cat \
 	  image \
 	  text
 
-SRCS = aosd_cat.c
-
 include ../buildsys.mk
-include ../extra.mk
-
-CPPFLAGS += ${LIB_CPPFLAGS} ${AUX_CFLAGS} -I..
-LDFLAGS += -L../libaosd -laosd ${AUX_LDFLAGS} shared/example-shared.a
