--- a/libaosd/Makefile
+++ b/libaosd/Makefile
@@ -3,16 +3,14 @@ LIB_MAJOR = 1
 LIB_MINOR = 0
 
 SRCS = aosd.c \
-       aosd-main.c
+       aosd-main.c \
+       aosd-text.c
 
-INCLUDES = aosd.h
-
-include ../extra.mk
-
-SRCS += ${AUX_PANGO}.c
-INCLUDES += ${AUX_PANGO}.h
+INCLUDES = aosd.h \
+	   aosd-text.h
 
 include ../buildsys.mk
+include ../extra.mk
 
 CPPFLAGS += ${LIB_CPPFLAGS} ${AUX_CFLAGS} -I..
 CFLAGS += ${LIB_CFLAGS}
