--- a/examples/animation/Makefile
+++ b/examples/animation/Makefile
@@ -5,5 +5,5 @@ SRCS = animation.c
 include ../../buildsys.mk
 include ../../extra.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} ${AUX_CFLAGS} -I../../libaosd
-LDFLAGS += -L../../libaosd -laosd ${AUX_LDFLAGS} ../shared/example-shared.a
+CPPFLAGS += ${AUX_CFLAGS} -I../..
+LDFLAGS += ${AUX_LDFLAGS} -L../../libaosd -laosd
