* Bumped version number for release;  * Changed bug report address;  * Added post-configure notice.

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 AC_PREREQ(2.54)
 
-AC_INIT([libaosd], [0.0.1], [bugs+libaosd@atheme.org])
+AC_INIT([libaosd], [0.1.0], [http://bugzilla.atheme.org/])
 AC_CONFIG_HEADER([config.h])
 
 AC_CANONICAL_HOST
@@ -68,3 +68,13 @@ AC_CONFIG_FILES(
     ]
 )
 AC_OUTPUT
+
+cat << _EOF_
+
+Configuration:
+	X Composite:	$enable_xcomposite
+
+Now type "make" to build, and "make install" to install.
+Thank you for using libaosd.
+
+_EOF_
