--- a/configure.ac
+++ b/configure.ac
@@ -27,6 +27,11 @@ AC_SUBST(PACKAGE)
 # Checks for libraries.
 BUILDSYS_SHARED_LIB
 
+PKG_CHECK_MODULES(X11, x11)
+PKG_CHECK_MODULES(XRENDER, xrender)
+
+X_LIBS="$X11_LIBS $XRENDER_LIBS"
+
 PKG_CHECK_MODULES(CAIRO, cairo)
 PKG_CHECK_MODULES(PANGO, pango)
 PKG_CHECK_MODULES(PANGOCAIRO, pangocairo)
@@ -56,6 +61,7 @@ else
     enable_xcomposite="no"
 fi
 
+AC_SUBST(X_LIBS)
 AC_SUBST(PACKAGES)
 AC_SUBST(AUX_CFLAGS)
 AC_SUBST(AUX_LDFLAGS)
