Removed all text related API as in the end it would turn out to be just pango_layout wrapper...

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -1,3 +1,7 @@
 X_LIBS = @X_LIBS@
 AUX_CFLAGS = @AUX_CFLAGS@
 AUX_LDFLAGS = @AUX_LDFLAGS@
+GLIB_CFLAGS = @GLIB_CFLAGS@
+GLIB_LDFLAGS = @GLIB_LDFLAGS@
+TEXT_CFLAGS = @TEXT_CFLAGS@
+TEXT_LDFLAGS = @TEXT_LDFLAGS@
