--- a/configure.ac
+++ b/configure.ac
@@ -33,12 +33,18 @@ PKG_CHECK_MODULES(XRENDER, xrender)
 X_LIBS="$X11_LIBS $XRENDER_LIBS"
 
 PKG_CHECK_MODULES(CAIRO, cairo)
+
+PACKAGES="cairo"
+AUX_CFLAGS="$CAIRO_CFLAGS"
+AUX_LDFLAGS="$CAIRO_LIBS"
+
+# TODO: these are not really obligatory for lib...
 PKG_CHECK_MODULES(PANGO, pango)
 PKG_CHECK_MODULES(PANGOCAIRO, pangocairo)
-
-PACKAGES="cairo pango pangocairo"
-AUX_CFLAGS="$CAIRO_CFLAGS $PANGO_CFLAGS $PANGOCAIRO_CFLAGS"
-AUX_LDFLAGS="$CAIRO_LIBS $PANGO_LIBS $PANGOCAIRO_LIBS"
+PKG_CHECK_MODULES(GLIB, glib-2.0)
+TEXT_CFLAGS="$PANGO_CFLAGS $PANGOCAIRO_CFLAGS"
+TEXT_LDFLAGS="$PANGO_LIBS $PANGOCAIRO_LIBS"
+GLIB_LDFLAGS="$GLIB_LIBS"
 
 AC_ARG_ENABLE(xcomposite,
     [AC_HELP_STRING([--disable-xcomposite], [avoid using X composite (default=autodetect)])],
@@ -65,6 +71,10 @@ AC_SUBST(X_LIBS)
 AC_SUBST(PACKAGES)
 AC_SUBST(AUX_CFLAGS)
 AC_SUBST(AUX_LDFLAGS)
+AC_SUBST(TEXT_CFLAGS)
+AC_SUBST(TEXT_LDFLAGS)
+AC_SUBST(GLIB_CFLAGS)
+AC_SUBST(GLIB_LDFLAGS)
 
 AC_CONFIG_FILES(
     [
