--- a/configure.ac
+++ b/configure.ac
@@ -30,21 +30,11 @@ BUILDSYS_SHARED_LIB
 PKG_CHECK_MODULES(X11, x11)
 PKG_CHECK_MODULES(XRENDER, xrender)
 
+X_CFLAGS="$X11_CFLAGS $XRENDER_CFLAGS"
 X_LIBS="$X11_LIBS $XRENDER_LIBS"
 
 PKG_CHECK_MODULES(CAIRO, cairo)
-
 PACKAGES="cairo"
-AUX_CFLAGS="$CAIRO_CFLAGS"
-AUX_LDFLAGS="$CAIRO_LIBS"
-
-# TODO: these are not really obligatory for lib...
-PKG_CHECK_MODULES(PANGO, pango)
-PKG_CHECK_MODULES(PANGOCAIRO, pangocairo)
-PKG_CHECK_MODULES(GLIB, glib-2.0)
-TEXT_CFLAGS="$PANGO_CFLAGS $PANGOCAIRO_CFLAGS"
-TEXT_LDFLAGS="$PANGO_LIBS $PANGOCAIRO_LIBS"
-GLIB_LDFLAGS="$GLIB_LIBS"
 
 AC_ARG_ENABLE(xcomposite,
     [AC_HELP_STRING([--disable-xcomposite], [avoid using X composite (default=autodetect)])],
@@ -55,26 +45,55 @@ if test "$enable_xcomposite" = "yes"; then
     PKG_CHECK_MODULES(XCOMPOSITE, xcomposite,
 	[
 	 PACKAGES+=" xcomposite"
-	 AUX_CFLAGS+=" $XCOMPOSITE_CFLAGS"
-	 AUX_LDFLAGS+=" $XCOMPOSITE_LIBS"
+	 X_CFLAGS+=" $XCOMPOSITE_CFLAGS"
+	 X_LIBS+=" $XCOMPOSITE_LIBS"
 	 AC_DEFINE([HAVE_XCOMPOSITE], [1], [X Composite extension available])
 	],
 	[
 	 AC_MSG_WARN(can't find xcomposite package)
+	 enable_xcomposite="no"
 	]
     )
 else
     enable_xcomposite="no"
 fi
 
-AC_SUBST(X_LIBS)
+EXAMPLES="animation"
+
+AC_ARG_ENABLE(pangocairo,
+    [AC_HELP_STRING([--disable-pangocairo], [avoid using Pango-Cairo (default=autodetect)])],
+    [enable_pangocairo=$enableval], [enable_pangocairo="yes"]
+)
+
+if test "$enable_pangocairo" = "yes"; then
+    PKG_CHECK_MODULES(PANGOCAIRO, pangocairo,
+	[EXAMPLES+=" aosd_cat"], [enable_pangocairo="no"])
+else
+    enable_pangocairo="no"
+fi
+
+AC_ARG_ENABLE(glib,
+    [AC_HELP_STRING([--disable-glib], [avoid using Glib-2.0 (default=autodetect)])],
+    [enable_glib=$enableval], [enable_glib="yes"]
+)
+
+if test "$enable_glib" = "yes"; then
+    PKG_CHECK_MODULES(GLIB, glib-2.0,
+	[EXAMPLES+=" image"], [enable_glib="no"])
+else
+    enable_glib="no"
+fi
+
 AC_SUBST(PACKAGES)
-AC_SUBST(AUX_CFLAGS)
-AC_SUBST(AUX_LDFLAGS)
-AC_SUBST(TEXT_CFLAGS)
-AC_SUBST(TEXT_LDFLAGS)
+AC_SUBST(EXAMPLES)
+AC_SUBST(X_CFLAGS)
+AC_SUBST(X_LIBS)
+AC_SUBST(CAIRO_CFLAGS)
+AC_SUBST(CAIRO_LIBS)
+AC_SUBST(PANGOCAIRO_CFLAGS)
+AC_SUBST(PANGOCAIRO_LIBS)
 AC_SUBST(GLIB_CFLAGS)
-AC_SUBST(GLIB_LDFLAGS)
+AC_SUBST(GLIB_LIBS)
 
 AC_CONFIG_FILES(
     [
@@ -88,7 +107,10 @@ AC_OUTPUT
 cat << _EOF_
 
 Configuration:
-	X Composite:	$enable_xcomposite
+AC_HELP_STRING([X Composite], [${enable_xcomposite}])
+AC_HELP_STRING([Pango-Cairo], [${enable_pangocairo}])
+AC_HELP_STRING([Glib-2.0], [${enable_glib}])
+AC_HELP_STRING([Examples], [${EXAMPLES}])
 
 Now type "make" to build, and "make install" to install.
 Thank you for using libaosd.
