--- a/extra.mk.in
+++ b/extra.mk.in
@@ -1,7 +1,10 @@
+EXAMPLES = @EXAMPLES@
+
+X_CFLAGS = @X_CFLAGS@
 X_LIBS = @X_LIBS@
-AUX_CFLAGS = @AUX_CFLAGS@
-AUX_LDFLAGS = @AUX_LDFLAGS@
+CAIRO_CFLAGS = @CAIRO_CFLAGS@
+CAIRO_LIBS = @CAIRO_LIBS@
+PANGOCAIRO_CFLAGS = @PANGOCAIRO_CFLAGS@
+PANGOCAIRO_LIBS = @PANGOCAIRO_LIBS@
 GLIB_CFLAGS = @GLIB_CFLAGS@
-GLIB_LDFLAGS = @GLIB_LDFLAGS@
-TEXT_CFLAGS = @TEXT_CFLAGS@
-TEXT_LDFLAGS = @TEXT_LDFLAGS@
+GLIB_LIBS = @GLIB_LIBS@
