Prepared for inclusion of pango helpers.

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -8,3 +8,6 @@ PANGOCAIRO_CFLAGS = @PANGOCAIRO_CFLAGS@
 PANGOCAIRO_LIBS = @PANGOCAIRO_LIBS@
 GLIB_CFLAGS = @GLIB_CFLAGS@
 GLIB_LIBS = @GLIB_LIBS@
+
+TEXT_SRCS = @TEXT_SRCS@
+TEXT_INCLUDES = @TEXT_INCLUDES@
