--- a/libaosd/Makefile
+++ b/libaosd/Makefile
@@ -8,9 +8,13 @@ SRCS = aosd.c \
 
 INCLUDES = aosd.h
 
-include ../buildsys.mk
 include ../extra.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} ${X_CFLAGS} ${CAIRO_CFLAGS} -I..
+SRCS += ${TEXT_SRCS}
+INCLUDES += ${TEXT_INCLUDES}
+
+include ../buildsys.mk
+
+CPPFLAGS += ${LIB_CPPFLAGS} ${X_CFLAGS} ${CAIRO_CFLAGS} ${PANGOCAIRO_CFLAGS} -I..
 CFLAGS += ${LIB_CFLAGS}
-LIBS += ${X_LIBS} ${CAIRO_LIBS}
+LIBS += ${X_LIBS} ${CAIRO_LIBS} ${PANGOCAIRO_LIBS}
