--- a/extra.mk.in
+++ b/extra.mk.in
@@ -9,5 +9,5 @@ PANGOCAIRO_LIBS = @PANGOCAIRO_LIBS@
 GLIB_CFLAGS = @GLIB_CFLAGS@
 GLIB_LIBS = @GLIB_LIBS@
 
-TEXT_SRCS = @TEXT_SRCS@
-TEXT_INCLUDES = @TEXT_INCLUDES@
+TEXT_DIR = @TEXT_DIR@
+TEXT_PKGCONF = @TEXT_PKGCONF@
