--- a/libaosd/Makefile
+++ b/libaosd/Makefile
@@ -1,5 +1,5 @@
 LIB = ${LIB_PREFIX}aosd${LIB_SUFFIX}
-LIB_MAJOR = 1
+LIB_MAJOR = 2
 LIB_MINOR = 0
 
 SRCS = aosd.c \
@@ -8,13 +8,9 @@ SRCS = aosd.c \
 
 INCLUDES = aosd.h
 
+include ../buildsys.mk
 include ../extra.mk
 
-SRCS += ${TEXT_SRCS}
-INCLUDES += ${TEXT_INCLUDES}
-
-include ../buildsys.mk
-
-CPPFLAGS += ${LIB_CPPFLAGS} ${X_CFLAGS} ${CAIRO_CFLAGS} ${PANGOCAIRO_CFLAGS} -I..
+CPPFLAGS += ${LIB_CPPFLAGS} ${X_CFLAGS} ${CAIRO_CFLAGS} -I..
 CFLAGS += ${LIB_CFLAGS}
-LIBS += ${X_LIBS} ${CAIRO_LIBS} ${PANGOCAIRO_LIBS}
+LIBS += ${X_LIBS} ${CAIRO_LIBS}
