--- a/examples/scroller/Makefile
+++ b/examples/scroller/Makefile
@@ -6,4 +6,4 @@ include ../../buildsys.mk
 include ../../extra.mk
 
 CPPFLAGS += ${PANGOCAIRO_CFLAGS} -I../../
-LDFLAGS += ${PANGOCAIRO_LIBS} -L../../libaosd -laosd -L../../libaosd-text -laosd-text
+LDFLAGS += -L../../libaosd-text -laosd-text
