--- a/examples/scroller/Makefile
+++ b/examples/scroller/Makefile
@@ -5,5 +5,5 @@ SRCS = scroller.c
 include ../../buildsys.mk
 include ../../extra.mk
 
-CPPFLAGS += ${PANGOCAIRO_CFLAGS} -I../../
-LDFLAGS += -L../../libaosd-text -laosd-text
+CPPFLAGS += ${PANGOCAIRO_CFLAGS} -I../../ -I../../libaosd -I../../libaosd-text
+LDFLAGS += -L../../libaosd -laosd -L../../libaosd-text -laosd-text
