--- a/examples/animation/Makefile
+++ b/examples/animation/Makefile
@@ -5,5 +5,5 @@ SRCS = animation.c
 include ../../buildsys.mk
 include ../../extra.mk
 
-CPPFLAGS += ${CAIRO_CFLAGS} -I../..
-LDFLAGS += ${CAIRO_LIBS} -L../../libaosd -laosd
+CPPFLAGS += ${CAIRO_CFLAGS} -I../.. -I../../libaosd
+LDFLAGS += -L../../libaosd -laosd
