--- a/examples/aosd_cat/Makefile
+++ b/examples/aosd_cat/Makefile
@@ -5,5 +5,5 @@ SRCS = aosd_cat.c
 include ../../buildsys.mk
 include ../../extra.mk
 
-CPPFLAGS += ${PANGOCAIRO_CFLAGS} -I../../ -I../../libaosd
-LDFLAGS += ${PANGOCAIRO_LIBS} -L../../libaosd -laosd
+CPPFLAGS += ${PANGOCAIRO_CFLAGS} ${GLIB_CFLAGS} -I../../ -I../../libaosd -I../../libaosd-text
+LDFLAGS += ${GLIB_LIBS} -L../../libaosd -laosd -L../../libaosd-text -laosd-text
