Some threading progress.

--- a/libaosd/Makefile
+++ b/libaosd/Makefile
@@ -4,7 +4,8 @@ LIB_MINOR = 0
 
 SRCS = aosd.c \
        aosd-internal.c \
-       aosd-main.c
+       aosd-main.c \
+       aosd-thread.c
 
 INCLUDES = aosd.h
 
