Backed out revision bce4a6b01292.

--- a/libaosd/Makefile
+++ b/libaosd/Makefile
@@ -4,8 +4,7 @@ LIB_MINOR = 0
 
 SRCS = aosd.c \
        aosd-internal.c \
-       aosd-main.c \
-       aosd-thread.c
+       aosd-main.c
 
 INCLUDES = aosd.h
 
