Fixed Debian's FTBFS bug #555078.

--- a/examples/animation/Makefile
+++ b/examples/animation/Makefile
@@ -6,4 +6,4 @@ include ../../buildsys.mk
 include ../../extra.mk
 
 CPPFLAGS += ${CAIRO_CFLAGS} -I../.. -I../../libaosd
-LDFLAGS += -L../../libaosd -laosd
+LDFLAGS += ${CAIRO_LIBS} -L../../libaosd -laosd
