--- a/examples/image/Makefile
+++ b/examples/image/Makefile
@@ -6,4 +6,4 @@ include ../../buildsys.mk
 include ../../extra.mk
 
 CPPFLAGS += ${CAIRO_CFLAGS} ${GLIB_CFLAGS} -I../../ -I../../libaosd
-LDFLAGS += ${GLIB_LIBS} -L../../libaosd -laosd
+LDFLAGS += ${CAIRO_LIBS} ${GLIB_LIBS} -L../../libaosd -laosd
