Added more build results into .hgignore

--- a/.hgignore
+++ b/.hgignore
@@ -1,4 +1,3 @@
-syntax: glob
 aclocal.m4
 autom4te.cache
 buildsys.mk
@@ -12,6 +11,15 @@ install-sh
 libaosd.pc
 libaosd-text.pc
 .deps
+
+examples/aosd_cat/aosd_cat.1
+
+examples/animation/animation
+examples/aosd_cat/aosd_cat
+examples/image/image
+examples/scroller/scroller
+
+syntax: glob
 *.a
 *.o
 *.dll
