Escape the hyphen in the aosd_cat man page for it to be interpreted as a minus sign instead.

--- a/examples/aosd_cat/aosd_cat.1.in
+++ b/examples/aosd_cat/aosd_cat.1.in
@@ -10,82 +10,82 @@ For parameters marked with asterisk (*) valid range is 0-255. Those, which are m
 .TP
 Geometry Options:
 .TP
-\fB-p\fR, \fB--position\fR
+\fB\-p\fR, \fB\-\-position\fR
 Sets the OSD window position. Valid range is 0-8, where 0 is top-left corner
 and 8 is bottom-right corner. Default value is \fB6\fR.
 .TP
-\fB-x\fR, \fB--x-offset\fR **
+\fB\-x\fR, \fB\-\-x\-offset\fR **
 Sets the x-axis window offset. Default value is \fB50\fR.
 .TP
-\fB-y\fR, \fB--y-offset\fR **
+\fB\-y\fR, \fB\-\-y\-offset\fR **
 Sets the y-axis window offset. Default value is \fB-50\fR.
 .TP
-\fB-e\fR, \fB--shadow-offset\fR **
+\fB\-e\fR, \fB\-\-shadow\-offset\fR **
 Sets the shadow offset. Default value is \fB2\fR.
 .TP
-\fB-d\fR, \fB--padding\fR *
+\fB\-d\fR, \fB\-\-padding\fR *
 Sets the margin from the edge to the contents. Default value is \fB0\fR.
 .TP
 Appearance Options:
 .TP
-\fB-t\fR, \fB--transparency\fR
+\fB\-t\fR, \fB\-\-transparency\fR
 Sets the transparency mode. 0=none, 1=fake, 2=composite. Default value is \fB2\fR.
 .TP
-\fB-n\fR, \fB--font\fR
+\fB\-n\fR, \fB\-\-font\fR
 Sets the OSD font. No default value.
 .TP
-\fB-w\fR, \fB--width\fR
+\fB\-w\fR, \fB\-\-width\fR
 Sets the OSD wrapping width in pixels. If set to zero, text will be
 wrapped on screen width or will not be wrapped at all if other
 parameters make it impossible to layout correctly. Default value is \fB0\fR.
 .TP
 Coloring Options:
 .TP
-\fB-B\fR, \fB--back-color\fR
+\fB\-B\fR, \fB\-\-back\-color\fR
 Sets the background color. No default value.
 .TP
-\fB-S\fR, \fB--shadow-color\fR
+\fB\-S\fR, \fB\-\-shadow\-color\fR
 Sets the shadow color. Default value is \fBblack\fR.
 .TP
-\fB-R\fR, \fB--fore-color\fR
+\fB\-R\fR, \fB\-\-fore\-color\fR
 Sets the foreground color. Default value is \fBgreen\fR.
 .TP
 Opacity Options:
 .TP
-\fB-b\fR, \fB--back-opacity\fR *
+\fB\-b\fR, \fB\-\-back\-opacity\fR *
 Sets the background opacity. Default value is \fB0\fR.
 .TP
-\fB-s\fR, \fB--shadow-opacity\fR *
+\fB\-s\fR, \fB\-\-shadow\-opacity\fR *
 Sets the shadow opacity. Default value is \fB192\fR.
 .TP
-\fB-r\fR, \fB--fore-opacity\fR *
+\fB\-r\fR, \fB\-\-fore\-opacity\fR *
 Sets the foreground opacity. Default value is \fB255\fR.
 .TP
 Timing Options:
 .TP
-\fB-f,\fR \fB--fade-in\fR
+\fB\-f,\fR \fB\-\-fade\-in\fR
 Sets the fade in time. Default value is \fB300\fR.
 .TP
-\fB-u,\fR \fB--fade-full\fR
+\fB\-u,\fR \fB\-\-fade\-full\fR
 Sets the time to show with full opacity. Default value is \fB3000\fR.
 .TP
-\fB-o,\fR \fB--fade-out\fR
+\fB\-o,\fR \fB\-\-fade\-out\fR
 Sets the fade out time. Default value is \fB300\fR.
 .TP
 Scrollback Options:
 .TP
-\fB-a,\fR \fB--age\fR
+\fB\-a,\fR \fB\-\-age\fR
 Sets the line age removal limit. Default value is \fB0\fR.
 .TP
-\fB-l,\fR \fB--lines\fR
+\fB\-l,\fR \fB\-\-lines\fR
 Sets the line amount removal limit. Default value is \fB1\fR.
 .TP
 Application Options:
 .TP
-\fB-i,\fR \fB--input\fR
+\fB\-i,\fR \fB\-\-input\fR
 Sets the input text source. Default value is \fB-\fR.
 .SH BUGS
-This manpage may be out of date. Use --help to get the latest options.
+This manpage may be out of date. Use \-\-help to get the latest options.
 
 Thank you for using libaosd!
 Please send bug reports to: @PACKAGE_BUGREPORT@
