--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -1,5 +1,7 @@
 #
-#  Copyright (c) 2007, Jonathan Schleifer <js@h3c.de>
+#  Copyright (c) 2007 - 2009, Jonathan Schleifer <js@webkeks.org>
+#
+#  https://webkeks.org/hg/buildsys/
 #
 #  Permission to use, copy, modify, and/or distribute this software for any
 #  purpose with or without fee is hereby granted, provided that the above
@@ -19,22 +21,30 @@
 #
 
 PACKAGE = @PACKAGE@
+AS = @AS@
 CC = @CC@
 CXX = @CXX@
 CPP = @CPP@
 DC = @DC@
 ERLC = @ERLC@
 OBJC = @OBJC@
+OBJCXX = @OBJCXX@
 AR = @AR@
 LD = ${CC}
+RANLIB = @RANLIB@
+PYTHON = @PYTHON@
+ASFLAGS = @ASFLAGS@
 CFLAGS = @CFLAGS@
 CXXFLAGS = @CXXFLAGS@
 CPPFLAGS = @CPPFLAGS@
 DFLAGS = @DFLAGS@
 ERLCFLAGS = @ERLCFLAGS@
 OBJCFLAGS = @OBJCFLAGS@
+OBJCXXFLAGS = @OBJCXXFLAGS@
 LDFLAGS = @LDFLAGS@
+LDFLAGS_RPATH = @LDFLAGS_RPATH@
 LIBS = @LIBS@
+PYTHON_FLAGS = @PYTHON_FLAGS@
 PROG_IMPLIB_NEEDED = @PROG_IMPLIB_NEEDED@
 PROG_IMPLIB_LDFLAGS = @PROG_IMPLIB_LDFLAGS@
 PROG_SUFFIX = @EXEEXT@
@@ -52,8 +62,9 @@ UNINSTALL_LIB = @UNINSTALL_LIB@
 CLEAN_LIB = @CLEAN_LIB@
 LN_S = @LN_S@
 MKDIR_P = mkdir -p
-INSTALL = install
+INSTALL = @INSTALL@
 SHELL = @SHELL@
+MSGFMT = @MSGFMT@
 prefix = @prefix@
 exec_prefix = @exec_prefix@
 bindir = @bindir@
@@ -63,6 +74,8 @@ datarootdir = @datarootdir@
 datadir = @datadir@
 includedir = @includedir@
 includesubdir ?= ${PACKAGE}
+localedir = @localedir@
+localename ?= ${PACKAGE}
 mandir = @mandir@
 mansubdir ?= man1
 
@@ -71,14 +84,24 @@ OBJS2 = ${OBJS1:.cc=.o}
 OBJS3 = ${OBJS2:.cxx=.o}
 OBJS4 = ${OBJS3:.d=.o}
 OBJS5 = ${OBJS4:.erl=.beam}
-OBJS += ${OBJS5:.m=.o}
+OBJS6 = ${OBJS5:.m=.o}
+OBJS7 = ${OBJS6:.mm=.o}
+OBJS8 = ${OBJS7:.py=.pyc}
+OBJS9 = ${OBJS8:.xpm=.o}
+OBJS += ${OBJS9:.S=.o}
+
+LIB_OBJS = ${OBJS:.o=.lib.o}
+PLUGIN_OBJS = ${OBJS:.o=.plugin.o}
+
+MO_FILES = ${LOCALES:.po=.mo}
 
 .SILENT:
-.SUFFIXES: .beam .c .cc .cxx .d .erl .m
+.SUFFIXES:
+.SUFFIXES: .beam .c .cc .cxx .d .dep .erl .lib.o .mo .m .mm .o .plugin.o .po .py .pyc .xpm .S
 .PHONY: all subdirs pre-depend depend install install-extra uninstall uninstall-extra clean distclean
 
 all:
-	for i in subdirs depend ${STATIC_LIB} ${STATIC_LIB_NOINST} ${LIB} ${LIB_NOINST} ${PLUGIN} ${PLUGIN_NOINST} ${PROG} ${PROG_NOINST}; do \
+	for i in subdirs depend ${STATIC_LIB} ${STATIC_LIB_NOINST} ${LIB} ${LIB_NOINST} ${PLUGIN} ${PLUGIN_NOINST} ${PROG} ${PROG_NOINST} locales; do \
 		${MAKE} ${MFLAGS} $$i || exit 1; \
 	done
 
@@ -91,26 +114,53 @@ subdirs:
 
 depend: pre-depend ${SRCS}
 	regen=0; \
+	deps=""; \
 	test -f .deps || regen=1; \
-	for i in ${SRCS}; do test $$i -nt .deps && regen=1; done; \
-	if test x"$$regen" = x"1"; then \
-		list=""; \
-		${DEPEND_STATUS}; \
-		for i in ${SRCS}; do \
-			case $${i##*.} in \
-			c|cc|cxx|m) \
-				list="$$list $$i"; \
+	for i in ${SRCS}; do \
+		case $$i in \
+			*.c) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.c}.dep"; \
 				;; \
-			esac; \
-		done; \
-		if test x"$$list" != "x"; then \
-			if ${CPP} ${CPPFLAGS} -M $$list >.deps; then \
-				${DEPEND_OK}; \
-			else \
-				${DEPEND_FAILED}; \
-			fi; \
+			*.cc) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.cc}.dep"; \
+				;; \
+			*.cxx) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.cxx}.dep"; \
+				;; \
+			*.m) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.m}.dep"; \
+				;; \
+			*.mm) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.mm}.dep"; \
+				;; \
+			*.S) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.S}.dep"; \
+				;; \
+		esac; \
+	done; \
+	if test x"$$regen" = x"1" -a x"$$deps" != "x"; then \
+		${DEPEND_STATUS}; \
+		if ${MAKE} ${MFLAGS} $$deps && cat $$deps >.deps; then \
+			rm -f $$deps; \
+			${DEPEND_OK}; \
+		else \
+			:> .deps; \
+			touch -t 0001010000 .deps; \
+			${DEPEND_FAILED}; \
 		fi; \
 	fi
+
+.c.dep .cc.dep .cxx.dep .m.dep .mm.dep .S.dep:
+	${CPP} ${CPPFLAGS} -M $< >$@ || (rm -f $@; exit 1)
+
+.d.dep:
+.xpm.dep:
 
 pre-depend:
 
@@ -122,17 +172,24 @@ ${PROG} ${PROG_NOINST}: ${EXT_DEPS} ${OBJS}
 		${LINK_FAILED}; \
 	fi
 
-${LIB} ${LIB_NOINST}: ${EXT_DEPS} ${OBJS}
-	${LINK_STATUS}
-	if ${LD} -o $@ ${OBJS} ${LIB_LDFLAGS} ${LDFLAGS} ${LIBS}; then \
-		${LINK_OK}; \
-	else \
-		${LINK_FAILED}; \
-	fi
+${LIB} ${LIB_NOINST}: ${EXT_DEPS} ${LIB_OBJS}
+	case $@ in \
+		*.a) \
+			${MAKE} ${MFLAGS} STATIC_LIB=${LIB} LIB= $@ || exit 1 \
+			;; \
+		*) \
+			${LINK_STATUS}; \
+			if ${LD} -o $@ ${LIB_OBJS} ${LIB_LDFLAGS} ${LDFLAGS} ${LIBS}; then \
+				${LINK_OK}; \
+			else \
+				${LINK_FAILED}; \
+			fi \
+			;; \
+	esac
 
-${PLUGIN} ${PLUGIN_NONST}: ${EXT_DEPS} ${OBJS}
+${PLUGIN} ${PLUGIN_NOINST}: ${EXT_DEPS} ${PLUGIN_OBJS}
 	${LINK_STATUS}
-	if ${LD} -o $@ ${OBJS} ${PLUGIN_LDFLAGS} ${LDFLAGS} ${LIBS}; then \
+	if ${LD} -o $@ ${PLUGIN_OBJS} ${PLUGIN_LDFLAGS} ${LDFLAGS} ${LIBS}; then \
 		${LINK_OK}; \
 	else \
 		${LINK_FAILED}; \
@@ -140,11 +197,14 @@ ${PLUGIN} ${PLUGIN_NONST}: ${EXT_DEPS} ${OBJS}
 
 ${STATIC_LIB} ${STATIC_LIB_NOINST}: ${EXT_DEPS} ${OBJS}
 	${LINK_STATUS}
-	if ${AR} cr $@ ${OBJS}; then \
+	if ${AR} cr $@ ${OBJS} && ${RANLIB} $@; then \
 		${LINK_OK}; \
 	else \
 		${LINK_FAILED}; \
+		rm -f $@; \
 	fi
+
+locales: ${MO_FILES}
 
 .c.o:
 	${COMPILE_STATUS}
@@ -153,6 +213,20 @@ ${STATIC_LIB} ${STATIC_LIB_NOINST}: ${EXT_DEPS} ${OBJS}
 	else \
 		${COMPILE_FAILED}; \
 	fi
+.c.lib.o:
+	${COMPILE_LIB_STATUS}
+	if ${CC} ${LIB_CFLAGS} ${CFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_LIB_OK}; \
+	else \
+		${COMPILE_LIB_FAILED}; \
+	fi
+.c.plugin.o:
+	${COMPILE_PLUGIN_STATUS}
+	if ${CC} ${PLUGIN_CFLAGS} ${CFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_PLUGIN_OK}; \
+	else \
+		${COMPILE_PLUGIN_FAILED}; \
+	fi
 
 .cc.o .cxx.o:
 	${COMPILE_STATUS}
@@ -160,6 +234,20 @@ ${STATIC_LIB} ${STATIC_LIB_NOINST}: ${EXT_DEPS} ${OBJS}
 		${COMPILE_OK}; \
 	else \
 		${COMPILE_FAILED}; \
+	fi
+.cc.lib.o .cxx.lib.o:
+	${COMPILE_LIB_STATUS}
+	if ${CXX} ${LIB_CFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_LIB_OK}; \
+	else \
+		${COMPILE_LIB_FAILED}; \
+	fi
+.cc.plugin.o .cxx.plugin.o:
+	${COMPILE_PLUGIN_STATUS}
+	if ${CXX} ${PLUGIN_CFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_PLUGIN_OK}; \
+	else \
+		${COMPILE_PLUGIN_FAILED}; \
 	fi
 
 .d.o:
@@ -192,6 +280,102 @@ ${STATIC_LIB} ${STATIC_LIB_NOINST}: ${EXT_DEPS} ${OBJS}
 		${COMPILE_OK}; \
 	else \
 		${COMPILE_FAILED}; \
+	fi
+.m.lib.o:
+	${COMPILE_LIB_STATUS}
+	if ${OBJC} ${LIB_CFLAGS} ${OBJCFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_LIB_OK}; \
+	else \
+		${COMPILE_LIB_FAILED}; \
+	fi
+.m.plugin.o:
+	${COMPILE_PLUGIN_STATUS}
+	if ${OBJC} ${PLUGIN_CFLAGS} ${OBJCFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_PLUGIN_OK}; \
+	else \
+		${COMPILE_PLUGIN_FAILED}; \
+	fi
+
+.mm.o:
+	${COMPILE_STATUS}
+	if ${OBJCXX} ${OBJCXXFLAGS} ${OBJCFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_OK}; \
+	else \
+		${COMPILE_FAILED}; \
+	fi
+.mm.lib.o:
+	${COMPILE_LIB_STATUS}
+	if ${OBJCXX} ${LIB_CFLAGS} ${OBJCXXFLAGS} ${OBJCFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_LIB_OK}; \
+	else \
+		${COMPILE_LIB_FAILED}; \
+	fi
+.mm.plugin.o:
+	${COMPILE_PLUGIN_STATUS}
+	if ${OBJCXX} ${PLUGIN_CFLAGS} ${OBJCXXFLAGS} ${OBJCFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_PLUGIN_OK}; \
+	else \
+		${COMPILE_PLUGIN_FAILED}; \
+	fi
+
+.po.mo:
+	${COMPILE_STATUS}
+	if ${MSGFMT} -c -o $@ $<; then \
+		${COMPILE_OK}; \
+	else \
+		${COMPILE_FAILED}; \
+	fi
+
+.py.pyc:
+	${COMPILE_STATUS}
+	if ${PYTHON} ${PYTHON_FLAGS} -c "import py_compile; py_compile.compile('$<')"; then \
+		${COMPILE_OK}; \
+	else \
+		${COMPILE_FAILED}; \
+	fi
+
+.xpm.o:
+	${COMPILE_STATUS}
+	if ${CC} ${CFLAGS} ${CPPFLAGS} -x c -c -o $@ $<; then \
+		${COMPILE_OK}; \
+	else \
+		${COMPILE_FAILED}; \
+	fi
+.xpm.lib.o:
+	${COMPILE_LIB_STATUS}
+	if ${CC} ${LIB_CFLAGS} ${CFLAGS} ${CPPFLAGS} -x c -c -o $@ $<; then \
+		${COMPILE_LIB_OK}; \
+	else \
+		${COMPILE_LIB_FAILED}; \
+	fi
+.xpm.plugin.o:
+	${COMPILE_PLUGIN_STATUS}
+	if ${CC} ${PLUGIN_CFLAGS} ${CFLAGS} ${CPPFLAGS} -x c -c -o $@ $<; then \
+		${COMPILE_PLUGIN_OK}; \
+	else \
+		${COMPILE_PLUGIN_FAILED}; \
+	fi
+
+.S.o:
+	${COMPILE_STATUS}
+	if ${AS} ${ASFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_OK}; \
+	else \
+		${COMPILE_FAILED}; \
+	fi
+.S.lib.o:
+	${COMPILE_LIB_STATUS}
+	if ${AS} ${LIB_CFLAGS} ${ASFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_LIB_OK}; \
+	else \
+		${COMPILE_LIB_FAILED}; \
+	fi
+.S.plugin.o:
+	${COMPILE_PLUGIN_STATUS}
+	if ${AS} ${PLUGIN_CFLAGS} ${ASFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_PLUGIN_OK}; \
+	else \
+		${COMPILE_PLUGIN_FAILED}; \
 	fi
 
 install: ${LIB} ${STATIC_LIB} ${PLUGIN} ${PROG} install-extra
@@ -255,6 +439,15 @@ install: ${LIB} ${STATIC_LIB} ${PLUGIN} ${PROG} install-extra
 		fi \
 	done
 
+	for i in ${MO_FILES}; do \
+		${INSTALL_STATUS}; \
+		if ${MKDIR_P} ${DESTDIR}${localedir}/$${i%.mo}/LC_MESSAGES && ${INSTALL} -m 644 $$i ${DESTDIR}${localedir}/$${i%.mo}/LC_MESSAGES/${localename}.mo; then \
+			${INSTALL_OK}; \
+		else \
+			${INSTALL_FAILED}; \
+		fi \
+	done
+
 	for i in ${MAN}; do \
 		${INSTALL_STATUS}; \
 		if ${MKDIR_P} ${DESTDIR}${mandir}/${mansubdir} && ${INSTALL} -m 644 $$i ${DESTDIR}${mandir}/${mansubdir}/$$i; then \
@@ -311,8 +504,10 @@ uninstall: uninstall-extra
 			else \
 				${DELETE_FAILED}; \
 			fi \
-		fi \
+		fi; \
+		rmdir "$$(dirname ${DESTDIR}${datadir}/${PACKAGE}/$$i)" >/dev/null 2>&1 || true; \
 	done
+	-rmdir ${DESTDIR}${datadir}/${PACKAGE} >/dev/null 2>&1
 
 	for i in ${PROG}; do \
 		if test -f ${DESTDIR}${bindir}/$$i; then \
@@ -335,6 +530,16 @@ uninstall: uninstall-extra
 	done
 	-rmdir ${DESTDIR}${includedir}/${includesubdir} >/dev/null 2>&1
 
+	for i in ${MO_FILES}; do \
+		if test -f ${DESTDIR}${localedir}/$${i%.mo}/LC_MESSAGES/${localename}.mo; then \
+			if rm -f ${DESTDIR}${localedir}/$${i%.mo}/LC_MESSAGES/${localename}.mo; then \
+				${DELETE_OK}; \
+			else \
+				${DELETE_FAILED}; \
+			fi \
+		fi \
+	done
+
 	for i in ${MAN}; do \
 		if test -f ${DESTDIR}${mandir}/${mansubdir}/$$i; then \
 			if rm -f ${DESTDIR}${mandir}/${mansubdir}/$$i; then \
@@ -353,8 +558,8 @@ clean:
 		${MAKE} ${MFLAGS} clean || exit 1; \
 		${DIR_LEAVE}; \
 	done
-	
-	for i in ${OBJS} ${CLEAN} ${CLEAN_LIB} .deps; do \
+
+	for i in ${DEPS} ${OBJS} ${LIB_OBJS} ${PLUGIN_OBJS} ${PROG} ${PROG_NOINST} ${LIB} ${LIB_NOINST} ${STATIC_LIB} ${STATIC_LIB_NOINST} ${PLUGIN} ${PLUGIN_NOINST} ${CLEAN_LIB} ${MO_FILES} ${CLEAN}; do \
 		if test -f $$i -o -d $$i; then \
 			if rm -fr $$i; then \
 				${DELETE_OK}; \
@@ -370,8 +575,8 @@ distclean: clean
 		${MAKE} ${MFLAGS} distclean || exit 1; \
 		${DIR_LEAVE}; \
 	done
-	
-	for i in ${PROG} ${PROG_NOINST} ${LIB} ${LIB_NOINST} ${STATIC_LIB} ${STATIC_LIB_NOINST} ${PLUGIN} ${PLUGIN_NOINST} ${DISTCLEAN} *~; do \
+
+	for i in ${DISTCLEAN} .deps *~; do \
 		if test -f $$i -o -d $$i; then \
 			if rm -fr $$i; then \
 				${DELETE_OK}; \
@@ -389,6 +594,12 @@ DEPEND_FAILED = printf "\033[K\033[0;31mFailed to generate dependencies!\033[0m\
 COMPILE_STATUS = printf "\033[K\033[0;33mCompiling \033[1;33m$<\033[0;33m...\033[0m\r"
 COMPILE_OK = printf "\033[K\033[0;32mSuccessfully compiled \033[1;32m$<\033[0;32m.\033[0m\n"
 COMPILE_FAILED = printf "\033[K\033[0;31mFailed to compile \033[1;31m$<\033[0;31m!\033[0m\n"; exit 1
+COMPILE_LIB_STATUS = printf "\033[K\033[0;33mCompiling \033[1;33m$<\033[0;33m (lib)...\033[0m\r"
+COMPILE_LIB_OK = printf "\033[K\033[0;32mSuccessfully compiled \033[1;32m$<\033[0;32m (lib).\033[0m\n"
+COMPILE_LIB_FAILED = printf "\033[K\033[0;31mFailed to compile \033[1;31m$<\033[0;31m (lib)!\033[0m\n"; exit 1
+COMPILE_PLUGIN_STATUS = printf "\033[K\033[0;33mCompiling \033[1;33m$<\033[0;33m (plugin)...\033[0m\r"
+COMPILE_PLUGIN_OK = printf "\033[K\033[0;32mSuccessfully compiled \033[1;32m$<\033[0;32m (plugin).\033[0m\n"
+COMPILE_PLUGIN_FAILED = printf "\033[K\033[0;31mFailed to compile \033[1;31m$<\033[0;31m (plugin)!\033[0m\n"; exit 1
 LINK_STATUS = printf "\033[K\033[0;33mLinking \033[1;33m$@\033[0;33m...\033[0m\r"
 LINK_OK = printf "\033[K\033[0;32mSuccessfully linked \033[1;32m$@\033[0;32m.\033[0m\n"
 LINK_FAILED = printf "\033[K\033[0;31mFailed to link \033[1;31m$@\033[0;31m!\033[0m\n"; exit 1
@@ -398,4 +609,4 @@ INSTALL_FAILED = printf "\033[K\033[0;31mFailed to install \033[1;31m$$i\033[0;3
 DELETE_OK = printf "\033[K\033[0;34mDeleted \033[1;34m$$i\033[0;34m.\033[0m\n"
 DELETE_FAILED = printf "\033[K\033[0;31mFailed to delete \033[1;31m$$i\033[0;31m!\033[0m\n"; exit 1
 
--include .deps
+include .deps
